# autocommit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
autocommit/: changelog.py  cli.py  config.py  explain.py  git.py  llm.py  merge.py  onboarding.py  pr.py  providers.py  review.py  scanner.py  secrets.py  split.py
tests/: conftest.py  test_changelog.py  test_cli.py  test_config.py  test_explain.py  test_git.py  test_llm.py  test_onboarding.py  test_pr.py  test_review.py  test_secrets.py  test_split.py
